pyquest/tests/parsing/invalid/test007.ql
// Question identifier with quotation marks
form testForm {
    "Question?"
    "var" : boolean
}